# encodec-explorer

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  encodec-explorer-c731bcc4b5596e54.js  encodec-explorer-c731bcc4b5596e54_bg.wasm  get-model.rs  index.html  sw.js
.cargo/: config.toml
.github/workflows/: pages.yml  rust.yml  typos.yml
assets/: manifest.json  sw.js
src/: app.rs  audio.rs  code_ui.rs  compute.rs  lib.rs  main.rs  synth.rs  worker.rs
